--- a/gb/21/12/16/n13440916.md
+++ b/gb/21/12/16/n13440916.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vfkyrj397/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>UBC校长：素里校区将设立医疗及科学项目</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年12月16日讯】<span style="font-weight: 400;">（大纪元记者</span><span style="font-weight: 400;">译明</span><span style="font-weight: 400;">加拿大温哥华编译报导）</span><span style="font-weight: 400;">12</span><span style="font-weight: 400;">月</span><span style="font-weight: 400;">14</span><span style="font-weight: 400;">日，<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E5%A4%A7%E5%AD%A6.md#1">卑诗大学</a>（</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">）副校长<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%9C%A3%E5%B0%8F%E9%87%8E.md#1">圣小野</a></span> <span style="font-weight: 400;">（</span><span style="font-weight: 400;">Santa J. Ono</span><span style="font-weight: 400;">）在<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E7%B4%A0%E9%87%8C%E8%B4%B8%E6%98%93%E5%B1%80.md#1">素里贸易局</a>向素里的商业界发表了他的第一个主题演讲，概述了</span><span style="font-weight: 400;">UBC </span><span style="font-weight: 400;">将如何成为素里的经济发展和劳动力资产，以及他们在素里的</span><span style="font-weight: 400;">初步</span><span style="font-weight: 400;">发展规划。</span></p>
+<p>【大纪元2021年12月16日讯】<span style="font-weight: 400;">（大纪元记者</span><span style="font-weight: 400;">译明</span><span style="font-weight: 400;">加拿大温哥华编译报导）</span><span style="font-weight: 400;">12</span><span style="font-weight: 400;">月</span><span style="font-weight: 400;">14</span><span style="font-weight: 400;">日，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E5%A4%A7%E5%AD%A6.md#1">卑诗大学</a>（</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">）副校长<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9C%A3%E5%B0%8F%E9%87%8E.md#1">圣小野</a></span> <span style="font-weight: 400;">（</span><span style="font-weight: 400;">Santa J. Ono</span><span style="font-weight: 400;">）在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%B4%A0%E9%87%8C%E8%B4%B8%E6%98%93%E5%B1%80.md#1">素里贸易局</a>向素里的商业界发表了他的第一个主题演讲，概述了</span><span style="font-weight: 400;">UBC </span><span style="font-weight: 400;">将如何成为素里的经济发展和劳动力资产，以及他们在素里的</span><span style="font-weight: 400;">初步</span><span style="font-weight: 400;">发展规划。</span></p>
 <p><span style="font-weight: 400;">11</span><span style="font-weight: 400;">月初</span><span style="font-weight: 400;">该</span><span style="font-weight: 400;">宣布</span><span style="font-weight: 400;">，</span><span style="font-weight: 400;">在乔治王大道</span><span style="font-weight: 400;">(King George Boulevard )</span><span style="font-weight: 400;">和菲沙高速公路</span><span style="font-weight: 400;">交汇地段</span><span style="font-weight: 400;">购买了一块</span><span style="font-weight: 400;">135,000</span><span style="font-weight: 400;">平方英尺</span><span style="font-weight: 400;">、</span><span style="font-weight: 400;">价值</span><span style="font-weight: 400;">7</span><span style="font-weight: 400;">,</span><span style="font-weight: 400;">000</span><span style="font-weight: 400;">万元的土地</span><span style="font-weight: 400;">，</span><span style="font-weight: 400;">并计划</span><span style="font-weight: 400;">在</span><span style="font-weight: 400;">素里市</span><span style="font-weight: 400;">设立分校区。</span></p>
-<p><span style="font-weight: 400;"><ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%9C%A3%E5%B0%8F%E9%87%8E.md#1">圣小野</a></span><span style="font-weight: 400;">周</span><span style="font-weight: 400;">二</span><span style="font-weight: 400;">带着</span><span style="font-weight: 400;">该校</span><span style="font-weight: 400;">医学、科学以及土地和食品系统学院的院长们参加了素里贸易委员会举办的午餐会。</span><span style="font-weight: 400;">据</span><span style="font-weight: 400;">Postmedia</span><span style="font-weight: 400;">报导，这是</span><span style="font-weight: 400;">小野</span><span style="font-weight: 400;">在宣布土地收购计划后</span><span style="font-weight: 400;">第一次与那</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">的商界人士见面，小野在讲话中，对</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">素</span><span style="font-weight: 400;">里校区的前景</span><span style="font-weight: 400;">进行了勾画，包括扩大医疗、牙科和其他健康实践项目，以利用靠近素里纪念医院的优势。</span></p>
+<p><span style="font-weight: 400;"><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9C%A3%E5%B0%8F%E9%87%8E.md#1">圣小野</a></span><span style="font-weight: 400;">周</span><span style="font-weight: 400;">二</span><span style="font-weight: 400;">带着</span><span style="font-weight: 400;">该校</span><span style="font-weight: 400;">医学、科学以及土地和食品系统学院的院长们参加了素里贸易委员会举办的午餐会。</span><span style="font-weight: 400;">据</span><span style="font-weight: 400;">Postmedia</span><span style="font-weight: 400;">报导，这是</span><span style="font-weight: 400;">小野</span><span style="font-weight: 400;">在宣布土地收购计划后</span><span style="font-weight: 400;">第一次与那</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">的商界人士见面，小野在讲话中，对</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">素</span><span style="font-weight: 400;">里校区的前景</span><span style="font-weight: 400;">进行了勾画，包括扩大医疗、牙科和其他健康实践项目，以利用靠近素里纪念医院的优势。</span></p>
 <p><span style="font-weight: 400;">不过</span><span style="font-weight: 400;">，正如该大学的</span><span style="font-weight: 400;">灰</span><span style="font-weight: 400;">点（</span><span style="font-weight: 400;">Point Grey</span><span style="font-weight: 400;">）校区和奥</span><span style="font-weight: 400;">肯</span><span style="font-weight: 400;">纳根</span> <span style="font-weight: 400;">（</span><span style="font-weight: 400;">Okanagan</span><span style="font-weight: 400;">）校区随着时间的推移而发展一样，小野说，“（计划）可能在</span><span style="font-weight: 400;">10</span><span style="font-weight: 400;">年内改变</span><span style="font-weight: 400;">，</span><span style="font-weight: 400;">可能会有一个领域或一个项目的出现”。</span></p>
 <p><span style="font-weight: 400;">小野介绍了一些初步构想，</span><span style="font-weight: 400;">同时听取了商界</span><span style="font-weight: 400;">对其他项目的反馈。素</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">贸易委员会主席安妮塔?休伯曼</span> <span style="font-weight: 400;">（</span><span style="font-weight: 400;">Anita Huberman</span><span style="font-weight: 400;">）说：“在支持商业、创造就业机会和新的基础设施方面，我们</span><span style="font-weight: 400;">提出了建议</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">修建一</span><span style="font-weight: 400;">个表演艺术中心的话题，就像他们在</span><span style="font-weight: 400;">灰点</span><span style="font-weight: 400;">校区所做的那样，以真正支持我们的创意经济。她正在考虑按照陈氏表演艺术中心</span> <span style="font-weight: 400;">（</span><span style="font-weight: 400;"> Chan Centre </span><span style="font-weight: 400;">）的思路进行建设规化。”</span></p>
 <p><span style="font-weight: 400;">安妮塔说，“我们非常缺乏这种类型的基础设施。”“到</span><span style="font-weight: 400;">2041</span><span style="font-weight: 400;">年，我们将成为卑诗省最大的城市</span><span style="font-weight: 400;">，</span><span style="font-weight: 400;">我认为会比这更快</span><span style="font-weight: 400;">，</span><span style="font-weight: 400;">而我们没有一个表演艺术中心。我们需要适合的活动空间。”</span></p>
 <p><span style="font-weight: 400;">她还说，她每天都收到企业有关劳动力短缺和技能挑战的电话。“人们打电话给我们说他们需要很多技术员工，因此（小野）非常清楚，</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">将成为解决劳动力挑战的重要力量之一，同时也将成为促进经济发展和提高生活质量的机构。”</span><span style="font-weight: 400;">??</span></p>
 <p><span style="font-weight: 400;">小野</span><span style="font-weight: 400;">表示</span><span style="font-weight: 400;">，农业技术</span><span style="font-weight: 400;">、</span><span style="font-weight: 400;">清洁和可再生能源以及电池研究，是素</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">校区确定的其他领域。他还补充说，科学院院长一直在仔细考虑对计算技术的需求，以及教师如何对</span><span style="font-weight: 400;">该地区</span><span style="font-weight: 400;">信息产业作出贡献。</span></p>
-<p><span style="font-weight: 400;">他在演讲中说</span><span style="font-weight: 400;">：</span><span style="font-weight: 400;">“素里校区可以使更多人有可能接受继续<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>，他们可能对学习编码、健康管理、经济学或其他课程感兴趣。他们可以在这</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">得到培训和提高，省去了前往</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">其他校区的通勤时间。”</span></p>
+<p><span style="font-weight: 400;">他在演讲中说</span><span style="font-weight: 400;">：</span><span style="font-weight: 400;">“素里校区可以使更多人有可能接受继续<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2.md#1">教育</a>，他们可能对学习编码、健康管理、经济学或其他课程感兴趣。他们可以在这</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">得到培训和提高，省去了前往</span><span style="font-weight: 400;">UBC</span><span style="font-weight: 400;">其他校区的通勤时间。”</span></p>
 <p><span style="font-weight: 400;">他还说，“鉴于素</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">和菲沙地区已经有这么多教职员工，我相信某些低年级的课程也可以在这</span><span style="font-weight: 400;">里</span><span style="font-weight: 400;">进行。”</span><span style="font-weight: 400;">?◇</span></p>
 <p>责任编辑：李盈</p>
 
@@ -21,41 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/7/1/n13060290.md#1">卑诗上诉法院裁定“海外买家税”合法</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/9/17/n13241047.md#1">卑诗省提供优惠政策 吸引医护人员到北方工作</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655611.md#1">乔治王子市爆发租房危机  十年内需建数千套新房</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655594.md#1">卑诗扩展电动车维修培训 今秋再添三所院校提供课程</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655547.md#1">一款金针菇感染李斯特菌被召回</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655498.md#1">成本剧增 卑诗企业面临涨价压力</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13652257.md#1">7 .3级地震袭击日本  专家预卑诗省不会发生海啸</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13652246.md#1">温哥华市府将拨款500万元  申办2026年男足世界杯</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13652224.md#1">卑诗启动疫情措施独立问卷调查</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13652182.md#1">宠物狗被咬伤   狗主人拟起诉肇事狗主索偿</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/7/1/n13060290.md#1">卑诗上诉法院裁定“海外买家税”合法</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/9/17/n13241047.md#1">卑诗省提供优惠政策 吸引医护人员到北方工作</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741363.md#1">辞职潮vs.后悔潮: 许多卑诗员工后悔当初辞职</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741358.md#1">如何制止校园霸凌</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741347.md#1">工人短缺使卑诗省餐饮业求才若渴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741162.md#1">列治文电动车充电需求激增  充电费随之增长</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741157.md#1">列治文烂尾公寓买家败诉  法官：证据不足</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741127.md#1">何良懋：中共暴力抗疫引发离境潮</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740426.md#1">素里当铺老板被控出售赃物  面临八项指控</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740421.md#1">卑诗省第二波Omicron疫情峰值已过</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/16/n13440916.htm">UBC校长：素里校区将设立医疗及科学项目</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/16/n13440916.htm">UBC校长：素里校区将设立医疗及科学项目</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vfkyrj397/djy/blob/master/gb/21/12/16/n13440916.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/12/16/n13440916.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
